Html/Css refactoring, new animations and bug fix
Html/Css refactoring
==================
* The mobile navigation bar was changed from a footer to a top bar and the sidebar was removed.
* Separated the position and styling of elements in the css for better readability.
* Better grid design

New animations
==================
changed the loading screen animation to shorten load time

Bug fix
=================
Svg's now always draw no matter if the scrollbar is showing or not...

--- a/_sass/_declarations.scss
+++ b/_sass/_declarations.scss
@@ -5,6 +5,7 @@ $background: #000000;
 $active: #e5e5e5;
 $inactive: #b4b4b4;
 
-$border-color: #1c1b1d;
+$border-color: #28272a;
 
-$mobile: 768px;
+$break-small: 425px;
+$break-large: 868px;
